--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ webdriver-manager
 validators
 # Pin NLTK to stabilize tokenizer resources in CI
 nltk>=3.9,<4
-sentence-transformers
+torch
+sentence-transformers>=5.1.0
 hnswlib
